# Restaurant-Management-System

./: LICENSE  README.md  ]
client-side/: package-lock.json  package.json
client-side/src/: App.js  api.js  index.css  index.js
client-side/src/components/button/: Button.jsx  button.module.css
client-side/src/components/container/: Container.jsx  container.module.css
client-side/src/components/input/: Input.jsx  input.module.css
client-side/src/components/label/: Label.jsx  label.module.css
client-side/src/components/thumbnails/: Thumbnail.jsx  thumbnail.module.css
client-side/src/pages/: ProtectedRoute.jsx
client-side/src/pages/AdminManagment/: AdminDashboard.jsx  RolesManagement.jsx  UserManagement.jsx  VendorManagement.jsx  userManagement.css
client-side/src/pages/home/: FeatureSection.jsx  Footer.jsx  Header.jsx  HeroSection.jsx  Home.jsx  home.css
client-side/src/pages/register/: RegisterForm.jsx  registerForm.css
client-side/src/pages/users/: UserHome.css  UserHome.jsx
client-side/src/pages/vendorsManagement/: VendorAdminManagement.css  VendorAdminManagement.jsx  VendorAdminProfile.css  VendorAdminProfile.jsx  VendorApp.jsx  VendorHome.css  VendorHome.jsx  VendorItemsManagement.css  VendorItemsManagement.jsx  VendorManagement.jsx  VendorManagementNavBar.css  VendorManagementNavBar.jsx  VendorNavBar.css  VendorNavBar.jsx  (+6 more)
client-side/src/redux/: store.js
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: AuthService.dart  Exceptions.dart  main.dart
mobile/lib/model/: ItemModel.dart  MetaModel.dart  SigninModel.dart  TableModel.dart  VendorModel.dart
mobile/lib/repository/: ItemRepository.dart  LoginRepository.dart  Statics.dart  TableRepository.dart  VendorRepository.dart
mobile/lib/screen/: AppDrawer.dart
mobile/test/: widget_test.dart
rust/embedded_rust/: Cargo.toml  diagram.json  wokwi.toml
rust/embedded_rust/src/: main.rs
rust/esp32-101/: Cargo.toml  diagram.json  wokwi.toml
rust/esp32-101/src/: main.rs
server-side/: .env  go.mod  go.sum  main.go
server-side/controllers/: controller.go
server-side/database/migrations/: 000001_create_users_table.up.sql  000008_create_orders_table.up.sql  000010_create_carts_table.up.sql
server-side/model/: Response.go  cartItmes.go  carts.go  items.go  orderItems.go  orders.go  role.go  tables.go  user.go  userRole.go  vendor.go  vendorAdmin.go
server-side/services/: ErrorHandler.go  cart.go  dataBase.go  embeddedRust.go  items.go  me.go  middlewares.go  order.go  role.go  signIn.go  signUp.go  table.go  user.go  userRole.go  utility.go  vendor.go  vendorAdmin.go
(+18 files in other folders)
